--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-phonecat",
-  "description": "A starter project for AngularJS",
-  "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-phonecat",
+  "name": "meeting-room-reservation",
+  "description": "A simple meeting-room-reservation",
+  "version": "0.1.0",
+  "homepage": "https://github.com/howbigbobo/meeting-room-reservation",
   "license": "MIT",
   "private": true,
   "dependencies": {
